--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Oscar App</title>
+  <title>Beer App</title>
 </head>
 <body>
   <div>Hello World</div>
